@@ -290,6 +290,8 @@ char *msg_momreject	= "Execution server rejected request";
 char *msg_nosyncmstr	= "No master found for sync job set";
 char *msg_sched_called 	= "Scheduler sent command %s";
 char *msg_sched_nocall  = "Could not contact Scheduler";
+char *msg_listnr_called = "Listener %d sent command %s";
+char *msg_listnr_nocall  = "Could not contact Listener";
 char *msg_stageinfail	= "Stage In of files failed";
 char *msg_rescunav	= "Resource temporarily unavailable";
 char *msg_maxqueued	= "Maximum number of jobs already in queue";
